# text2SIGNAL

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README_UI.md  pip.conf  pyproject.toml  requirements.txt  requirementsUI.txt
.github/: pull_request_template.md
data/: text2signal-1-156.txt  text2signal-fromhtmls.txt
ft-training-external-gits/: README.md  generate_predictions_signal.py  lora_starcoder.yaml  luminous_base_adapter.yml  text2signal_config_alexey.yaml  text2signal_config_signal.yaml  text2signal_tuning_data.yaml  train_text2signal copy.py  train_text2signal.py
notebooks/: 01_Signavio_connection.py  01_gui_signvio_signal_main_page.py  1_Phase_GetSignalsFromSignavio.ipynb  2_Phase_LoadSignalsFromCSV.ipynb  3_Phase_LLMexperiments_withSubsetSignalsFromCSV.ipynb  4_Pahse_Final_FT-LLM_results_error_analysis.ipynb  AIcore_Infer.ipynb  FT-AA-data_preparation.ipynb  FT-OpenAI.ipynb  Refactored_1_Phase_GetSignalsFromSignavio.ipynb  Refactored_2_Phase_LoadSignalsFromCSV.ipynb  probe.jsonl  schemas_from_views_2024-02-01T10_44_03.csv  signals_chatdb_natural-sql-7b-step_5037_test_set_1000-lr-04.json  signals_codellama_test_set_1000_10_epoch-lr-05.json  signals_codellama_test_set_1000_10_epoch.json  signals_codellama_test_set_1000_11_epoch-lr-05_1536.json  signals_codellama_test_set_1000_11_epochs-lr-04_6999_step_no_mask.json  signals_codellama_test_set_1000_30_epoch-lr-05.json  signals_davinci-002-1epoch-lrm5_test_set_1000_1epoch_lrm5.json  signals_davinci-002-3epochs_test_set_1000_epoch_3.json  signals_gpt-35-turbo-0613-text2signal-10epochs_test_set_1000_epoch_10.json  signals_gpt-35-turbo-0613-text2signal-1epoch-lrm-5_test_set_1000_epoch_1_lrm_5.json  signals_gpt-35-turbo-0613-text2signal-1epoch_test_set_1000_epoch_1.json  signals_gpt-35-turbo-0613-text2signal_test_set_1000_epoch_5.json  signals_mistral_test_set_1000.json  signals_mistral_test_set_1000_10_epoch-lr-05.json  signals_mistral_test_set_1000_10_epoch.json  signals_mistral_test_set_1000_without_ft.json  signavio_lib.py  subset_validated_1542_signals_2024-02-01T11_33_27.csv  text2signal_test_1000.jsonl  text2signal_test_1000_aa.json  text2signal_test_1000_aa.jsonl  text2signal_test_1000_openai.jsonl  text2signal_test_1000_openai_completion.jsonl  (+6 more)
(+10475 files in other folders)
